--- a/package.json
+++ b/package.json
@@ -3,38 +3,48 @@
   "version": "0.1.0",
   "homepage": "https://spencerhongwebsite.github.io/spencerhongwebsite.github.io",
   "private": true,
- "dependencies": {
-    "@react95/core": "^2.10.1",
-    "@react95/icons": "^2.0.5",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^15.0.0",
-    "@testing-library/user-event": "^14.5.2",
+  "dependencies": {
+    "@react95/core": "^2.10.0",
+    "@react95/icons": "^2.0.4",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^5.2.1",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.11",
-    "web-vitals": "^3.5.2",
-    "webamp": "^1.6.0",
-    "win95-media-player": "^0.1.0"
+    "react-icons": "^4.3.1",
+    "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
+    "web-vitals": "^2.1.4",
+    "webamp": "^1.5.0",
+        "win95-media-player": "^0.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
-    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^3.2.3"
   }
 }
-
